# terminus_math

./: .gitignore  CMakeLists.txt  changelog.md  conanfile.py
cmake/: terminus_mathConfig.cmake.in
cmake/scripts/: Find_Dependencies.cmake
include/terminus/coordinate/: Datum.hpp
include/terminus/coordinate/conversions/vw/: Lon_Lat_Rad_To_XYZ_Estimate_Functor.hpp  XYZ_to_Lon_Lat_Rad_Estimate_Functor.hpp
include/terminus/math/: Quaternion.hpp  matrix.hpp
include/terminus/math/linalg/: Operations.hpp  SVD.hpp  Solvers.hpp
include/terminus/math/matrix/: Matrix.hpp  MatrixN.hpp  Matrix_Base.hpp  Matrix_Functors.hpp  Matrix_Matrix_Product.hpp
include/terminus/math/optimization/: Least_Squares_Model_Base.hpp  Levenburg_Marquardt.hpp
include/terminus/math/types/: Functors.hpp
include/terminus/math/vector/: Vector.hpp  VectorN.hpp  Vector_Functors.hpp  Vector_Utilities.hpp
src/coordinate/: Datum.cpp
src/math/linalg/: SVD.cpp  Solvers.cpp
templates/: exports.hpp.in
test/unit/: CMakeLists.txt
test/unit/coordinate/vw/: TEST_Point_Transformations.cpp
test/unit/math/: TEST_Point.cpp  TEST_Quaternion.cpp  TEST_point.cpp  TEST_quaternion.cpp  TEST_rectangle.cpp  TEST_size.cpp
test/unit/math/linalg/: TEST_Operations.cpp  TEST_SVD.cpp  TEST_operations.cpp  TEST_svd.cpp
test/unit/math/matrix/: TEST_Matrix.cpp  TEST_Matrix_Operations.cpp  TEST_matrix.cpp  TEST_matrix_base.cpp  TEST_matrix_multiplication.cpp  TEST_matrix_operations.cpp  TEST_matrix_transpose.cpp  TEST_matrixn.cpp
test/unit/math/optimization/: TEST_levenburg_marquardt.cpp
test/unit/math/types/: TEST_Fundamental_Types.cpp  TEST_compound_types.cpp  TEST_fundamental_types.cpp
test/unit/math/vector/: TEST_Vector.cpp  TEST_Vector_Utilities.cpp  TEST_vector.cpp  TEST_vector_transpose.cpp  TEST_vector_utilities.cpp  TEST_vectorn.cpp
